--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="search-results" id="searchResults"></div>
     </div>
+    <script src="index.js></script>
 </body>
 
 </html>
