--- a/index (1).html
+++ b/index (1).html
@@ -25,7 +25,7 @@
         </div>
         <div class="search-results" id="searchResults"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="index(1).js"></script>
 </body>
 
 </html>
